--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>mockito-core</artifactId>
 			<version>5.11.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
